# Cross-platform release packaging.
#
# Binary archives (ironclaw CLI + ohc server):
#   bazelisk build //release:ironclaw-x86_64-unknown-linux-gnu
#   bazelisk build //release:all_ironclaw_archives
#
# Flutter mobile / desktop apps (require Flutter SDK on PATH):
#   bazelisk run  //release:flutter-build-android-apk
#   bazelisk run  //release:flutter-build-android-aab
#   bazelisk run  //release:flutter-build-ios          # macOS only
#   bazelisk run  //release:flutter-build-macos        # macOS only
#   bazelisk run  //release:flutter-build-windows      # Windows only
#   bazelisk run  //release:flutter-build-linux
#   bazelisk run  //release:flutter-build-web
#
# All Flutter targets at once:
#   bazelisk run  //release:flutter-build-all
#
# The GitHub Actions release workflow (`.github/workflows/release.yml`) uses
# these targets to produce artifacts that are uploaded to GitHub Releases.

load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# ── Linux x86_64 ──────────────────────────────────────────────────────────────

pkg_files(
    name = "ironclaw_linux_amd64_files",
    srcs = ["//srcs/cmd/ironclaw:ironclaw_linux_amd64"],
    renames = {"//srcs/cmd/ironclaw:ironclaw_linux_amd64": "ironclaw"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ironclaw-x86_64-unknown-linux-gnu",
    srcs = [":ironclaw_linux_amd64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── Linux aarch64 ─────────────────────────────────────────────────────────────

pkg_files(
    name = "ironclaw_linux_arm64_files",
    srcs = ["//srcs/cmd/ironclaw:ironclaw_linux_arm64"],
    renames = {"//srcs/cmd/ironclaw:ironclaw_linux_arm64": "ironclaw"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ironclaw-aarch64-unknown-linux-gnu",
    srcs = [":ironclaw_linux_arm64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── macOS x86_64 (Intel) ──────────────────────────────────────────────────────

pkg_files(
    name = "ironclaw_darwin_amd64_files",
    srcs = ["//srcs/cmd/ironclaw:ironclaw_darwin_amd64"],
    renames = {"//srcs/cmd/ironclaw:ironclaw_darwin_amd64": "ironclaw"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ironclaw-x86_64-apple-darwin",
    srcs = [":ironclaw_darwin_amd64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── macOS aarch64 (Apple Silicon) ─────────────────────────────────────────────

pkg_files(
    name = "ironclaw_darwin_arm64_files",
    srcs = ["//srcs/cmd/ironclaw:ironclaw_darwin_arm64"],
    renames = {"//srcs/cmd/ironclaw:ironclaw_darwin_arm64": "ironclaw"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ironclaw-aarch64-apple-darwin",
    srcs = [":ironclaw_darwin_arm64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── Windows x86_64 ────────────────────────────────────────────────────────────

pkg_files(
    name = "ironclaw_windows_amd64_files",
    srcs = ["//srcs/cmd/ironclaw:ironclaw_windows_amd64"],
    renames = {"//srcs/cmd/ironclaw:ironclaw_windows_amd64": "ironclaw.exe"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ironclaw-x86_64-pc-windows-msvc",
    srcs = [":ironclaw_windows_amd64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── Convenience alias ─────────────────────────────────────────────────────────
# Build all platform archives in one shot.

filegroup(
    name = "all_ironclaw_archives",
    srcs = [
        ":ironclaw-aarch64-apple-darwin",
        ":ironclaw-aarch64-unknown-linux-gnu",
        ":ironclaw-x86_64-apple-darwin",
        ":ironclaw-x86_64-pc-windows-msvc",
        ":ironclaw-x86_64-unknown-linux-gnu",
    ],
    visibility = ["//visibility:public"],
)

# ── Server (ohc) cross-platform packaging ─────────────────────────────────────
# Mirrors the ironclaw layout for the backend server binary.

pkg_files(
    name = "ohc_linux_amd64_files",
    srcs = ["//srcs/cmd/ohc"],
    renames = {"//srcs/cmd/ohc:ohc": "ohc"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ohc-x86_64-unknown-linux-gnu",
    srcs = [":ohc_linux_amd64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── Flutter app release targets ───────────────────────────────────────────────
# Each sh_binary wraps `flutter build <platform>` so releases can be triggered
# with a single Bazel command from the repository root, e.g.:
#
#   bazelisk run //release:flutter-build-android-apk
#
# All targets are tagged "manual" so they are excluded from `bazelisk test //...`
# (they require a Flutter SDK and, for mobile/desktop targets, the corresponding
#  native SDK / toolchain on the host machine).

exports_files(
    [
        "flutter_build.sh",
    ],
    visibility = ["//visibility:public"],
)

# Android – APK (side-loadable)
alias(
    name = "flutter-build-android-apk",
    actual = "//srcs/app:app.apk",
    visibility = ["//visibility:public"],
)

# Android – App Bundle (Play Store)
# App bundle output is not currently defined in the hermetic macro, so we'll
# alias to APK for now or wait for rules_flutter update.
alias(
    name = "flutter-build-android-aab",
    actual = "//srcs/app:app.apk",
    visibility = ["//visibility:public"],
)

# iOS (requires macOS + Xcode)
alias(
    name = "flutter-build-ios",
    actual = "//srcs/app:app.ios",
    visibility = ["//visibility:public"],
)

# macOS desktop (requires macOS + Xcode)
alias(
    name = "flutter-build-macos",
    actual = "//srcs/app:app.macos",
    visibility = ["//visibility:public"],
)

# Windows desktop (requires Windows + MSVC)
alias(
    name = "flutter-build-windows",
    actual = "//srcs/app:app.windows",
    visibility = ["//visibility:public"],
)

# Linux desktop
alias(
    name = "flutter-build-linux",
    actual = "//srcs/app:app.linux",
    visibility = ["//visibility:public"],
)

# Web
alias(
    name = "flutter-build-web",
    actual = "//srcs/app:app.web",
    visibility = ["//visibility:public"],
)

# Convenience alias – build every Flutter platform in one shot.
# Usage: bazelisk build //release:flutter-build-all
filegroup(
    name = "flutter-build-all",
    srcs = [
        ":flutter-build-android-apk",
        ":flutter-build-linux",
        ":flutter-build-web",
    ],
    visibility = ["//visibility:public"],
)
