[package]
name = "openclaw-desktop"
version = "1.0.0"
description = "OpenClaw Manager Desktop App"
authors = ["OpenClaw Team"]
license = ""
repository = ""
default-run = "openclaw-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "openclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openclaw-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
which = "6"
sysinfo = "0.31"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
