load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello-world-agent_lib",
    srcs = ["main.go"],
    importpath = "github.com/onehumancorp/mono/examples/hello-world-agent",
    visibility = ["//visibility:private"],
    deps = ["//srcs/agents"],
)

go_binary(
    name = "hello-world",
    embed = [":hello-world-agent_lib"],
    visibility = ["//visibility:public"],
)
