load("@rules_flutter//flutter:defs.bzl", "flutter_app", "flutter_library", "flutter_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "pubspec.yaml",
    "pub_deps.json",
])

# ── Source filegroup (non-flutter uses, e.g. layout checks) ──────────────────

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "BUILD.bazel",
            "e2e/**",
            "lib/*.dart",
            "test/**",
            "web/**",
            "pubspec.yaml",
            "pubspec.lock",
            "pub_deps.json",
        ],
        allow_empty = True,
    ) + [
        "//srcs/app/lib/models:srcs",
        "//srcs/app/lib/services:srcs",
        "//srcs/app/lib/screens:srcs",
        "//srcs/app/lib/widgets:srcs",
    ],
    visibility = ["//visibility:public"],
)

# ── Flutter Libraries ─────────────────────────────────────────────────────────

flutter_library(
    name = "router_lib",
    srcs = ["lib/router.dart"],
    pubspec = "pubspec.yaml",
    workspace_pubspec = "//:pubspec.yaml",
    deps = [
        "//srcs/app/lib/models:models_lib",
        "//srcs/app/lib/screens:screens_lib",
        "//srcs/app/lib/services:auth_service",
        "@pub_go_router//:go_router",
    ],
)

flutter_library(
    name = "main_lib",
    srcs = ["lib/main.dart"],
    pubspec = "pubspec.yaml",
    workspace_pubspec = "//:pubspec.yaml",
    deps = [
        ":router_lib",
        "//srcs/app/lib/services:services_lib",
        "//srcs/app/lib/widgets:widgets_lib",
        "@flutter_sdk//flutter/packages/flutter",
        "@pub_flutter_riverpod//:flutter_riverpod",
    ],
)

# Aggregate target for embedding and testing
flutter_library(
    name = "app_lib",
    srcs = [],
    pubspec = "pubspec.yaml",
    workspace_pubspec = "//:pubspec.yaml",
    visibility = ["//srcs/app:__subpackages__"],
    deps = [
        ":main_lib",
        ":router_lib",
        "//srcs/app/lib/models:models_lib",
        "//srcs/app/lib/services:services_lib",
        "//srcs/app/lib/screens:screens_lib",
        "//srcs/app/lib/widgets:widgets_lib",
        # SDK and third-party deps
        "@flutter_sdk//flutter/packages/flutter",
        "@pub_go_router//:go_router",
        "@pub_flutter_riverpod//:flutter_riverpod",
        "@pub_http//:http",
        "@pub_intl//:intl",
        "@pub_uuid//:uuid",
        "@pub_shared_preferences//:shared_preferences",
        "@pub_web_socket_channel//:web_socket_channel",
        "@pub_centrifuge//:centrifuge",
        "@pub_mocktail//:mocktail",
        "@pub_cupertino_icons//:cupertino_icons",
        "@pub_flutter_lints//:flutter_lints",
    ],
)

# ── Flutter Tests ─────────────────────────────────────────────────────────────

# (Individual tests are now in lib/*/BUILD.bazel)

# ── Layout / structure test (no Flutter required) ─────────────────────────────
# Verifies all expected source files are present in the app tree.
# Always runs; no Flutter SDK needed.

sh_test(
    name = "app_layout_test",
    srcs = ["test/flutter_layout_test.sh"],
    data = [":srcs"],
)

flutter_test(
    name = "app_desktop_e2e_test",
    srcs = ["test/desktop_e2e_test.dart"],
    embed = [":app_lib"],
    test_files = ["test/desktop_e2e_test.dart"],
    workspace_pubspec = "//:pubspec.yaml",
)

# ── Flutter web app build ─────────────────────────────────────────────────────
# Builds the Flutter app for the web platform.  The resulting artifacts are used
# by the Playwright e2e test target below.

flutter_app(
    name = "app",
    apk = glob(["android/**"], allow_empty = True),
    embed = [":app_lib"],
    ios = glob(["ios/**"], allow_empty = True),
    linux = glob(["linux/**"], allow_empty = True),
    macos = glob(["macos/**"], allow_empty = True),
    visibility = ["//visibility:public"],
    web = glob(["web/**"], allow_empty = True),
    windows = glob(["windows/**"], allow_empty = True),
    workspace_pubspec = "//:pubspec.yaml",
)

# ── Web E2E tests (Playwright) ────────────────────────────────────────────────
# Serves the built Flutter web app and runs Playwright tests against it in a
# real Chromium browser.  Depends on the web build artifacts from :app_web.

sh_test(
    name = "app_web_e2e_test",
    srcs = ["test/flutter_web_e2e_test.sh"],
    data = [
        ":app",
        "e2e/playwright.config.ts",
        "e2e/web.spec.ts",
        "//:node_modules/@playwright/test",
    ],
    tags = ["requires-network"],  # browser download may need network on first run
)

# ── Local Development targets ─────────────────────────────────────────────────

sh_binary(
    name = "start",
    srcs = ["test/start_web.sh"],
    data = [
        ":app",
        "test/bazel_helpers.sh",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "capture_screenshots",
    srcs = ["test/capture_screenshots.sh"],
    data = [
        ":app",
        "e2e/capture_screenshots.mjs",
        "test/bazel_helpers.sh",
        "//:node_modules/@playwright/test",
    ],
    visibility = ["//visibility:public"],
)
