load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = [
        "handlers.go",
        "jwt.go",
        "middleware.go",
        "oidc.go",
        "store.go",
    ],
    importpath = "github.com/onehumancorp/mono/srcs/auth",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_crypto//bcrypt",
    ],
)

go_test(
    name = "auth_test",
    srcs = ["auth_test.go"],
    deps = [":auth"],
)
