load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "billing",
    srcs = ["tracker.go"],
    importpath = "github.com/onehumancorp/mono/srcs/billing",
    visibility = ["//visibility:public"],
    deps = ["//srcs/telemetry"],
)

go_test(
    name = "billing_test",
    srcs = ["tracker_test.go"],
    embed = [":billing"],
)
