load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "capability",
    srcs = ["capability.go"],
    importpath = "github.com/onehumancorp/mono/srcs/capability",
    visibility = ["//visibility:public"],
    deps = [
        "@org_modernc_sqlite//:sqlite",
    ],
)

go_test(
    name = "capability_test",
    srcs = ["capability_test.go"],
    embed = [":capability"],
    deps = [
    ],
)
