[package]
name = "ohc-core"
version = "0.1.0"
edition = "2021"
description = "One Human Corp core library — settings, agent scheduling, meeting rooms, and chat integration"
license = "Apache-2.0"

[[bin]]
name = "ohc-core"
path = "src/main.rs"

[lib]
name = "ohc_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
