load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dashboard",
    srcs = [
        "handlers_agent.go",
        "handlers_b2b.go",
        "handlers_chat.go",
        "handlers_integration.go",
        "handlers_ops.go",
        "handlers_org.go",
        "server.go",
    ],
    importpath = "github.com/onehumancorp/mono/srcs/dashboard",
    visibility = ["//visibility:public"],
    deps = [
        "//srcs/agents",
        "//srcs/auth",
        "//srcs/billing",
        "//srcs/domain",
        "//srcs/integrations",
        "//srcs/orchestration",
        "//srcs/telemetry",
    ],
)

go_test(
    name = "dashboard_test",
    srcs = [
        "server_missing_test.go",
        "server_test.go",
    ],
    embed = [":dashboard"],
    deps = [
        "//srcs/billing",
        "//srcs/domain",
        "//srcs/integrations",
        "//srcs/orchestration",
    ],
)

go_test(
    name = "cve_exploit_regression_test",
    srcs = ["server_test.go"],
    args = ["-test.run=TestHandleHireAgent_InvalidRoleRejected"],
    embed = [":dashboard"],
    deps = [
        "//srcs/billing",
        "//srcs/domain",
        "//srcs/integrations",
        "//srcs/orchestration",
    ],
)
