load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dashboard",
    srcs = [
        "handlers_agent.go",
        "handlers_b2b.go",
        "handlers_chat.go",
        "handlers_integration.go",
        "handlers_ops.go",
        "handlers_org.go",
        "handlers_mcp.go",
        "handlers_scheduler.go",
        "handlers_seed.go",
        "handlers_wizard.go",
        "seeder.go",
        "server.go",
        "tenant.go",
    ],
    importpath = "github.com/onehumancorp/mono/srcs/dashboard",
    visibility = ["//visibility:public"],
    deps = [
        "//srcs/agents",
        "//srcs/auth",
        "//srcs/billing",
        "//srcs/domain",
        "//srcs/integrations",
        "//srcs/interop",
        "//srcs/orchestration",
        "//srcs/scheduler",
        "//srcs/settings",
        "//srcs/telemetry",
    ],
)

go_test(
    name = "dashboard_test",
    srcs = [
        "handlers_b2b_extra_test.go",
        "handlers_mcp_test.go",
        "handlers_ops_extra_test.go",
        "handlers_ops_test.go",
        "handlers_scheduler_test.go",
        "handlers_wizard_test.go",
        "server_missing_test.go",
        "server_rate_limit_test.go",
        "server_test.go",
        "tenant_test.go",
    ],
    embed = [":dashboard"],
    deps = [
        "//srcs/auth",
        "//srcs/billing",
        "//srcs/domain",
        "//srcs/integrations",
        "//srcs/orchestration",
        "//srcs/scheduler",
        "//srcs/settings",
    ],
)
