load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "b2b.go",
        "compute.go",
        "federation.go",
        "organization.go",
    ],
    importpath = "github.com/onehumancorp/mono/srcs/domain",
    visibility = ["//visibility:public"],
)

go_test(
    name = "domain_test",
    srcs = [
        "b2b_test.go",
        "compute_test.go",
        "federation_test.go",
        "organization_test.go",
    ],
    embed = [":domain"],
)
