load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "agent.go",
        "b2b.go",
        "blueprint.go",
        "compute.go",
        "federation.go",
        "organization.go",
        "sre.go",
    ],
    importpath = "github.com/onehumancorp/mono/srcs/domain",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "domain_test",
    srcs = [
        "b2b_test.go",
        "blueprint_test.go",
        "compute_test.go",
        "federation_test.go",
        "organization_test.go",
        "sre_test.go",
    ],
    embed = [":domain"],
)
