load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Copy generated proto TypeScript types into the frontend source tree so they
# are available to the npm build and vitest test runner.
genrule(
    name = "proto_types_ts",
    srcs = ["//srcs/proto:proto_types_ts"],
    outs = ["src/proto_types.ts"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "src/**",
            "*.json",
            "*.html",
            "*.ts",
        ],
        exclude = [
            "node_modules/**",
            "dist/**",
        ],
    ) + [":proto_types_ts"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_srcs",
    srcs = glob(
        [
            "src/**",
            "tests/**",
            "*.json",
            "*.html",
            "*.ts",
        ],
        exclude = [
            "node_modules/**",
            "dist/**",
            "tests/screenshots/**",
        ],
    ) + [":proto_types_ts"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "frontend_layout_test",
    srcs = ["tests/layout_test.sh"],
    data = [
        "package.json",
        ":srcs",
    ],
)

# Run npm unit tests (vitest) via Bazel.
# Requires node and npm on PATH (inherited from the host via .bazelrc test_env).
sh_test(
    name = "frontend_unit_test",
    srcs = ["tests/unit_test.sh"],
    data = [
        ":all_srcs",
        "//srcs/cmd/ohc:ohc",
    ],
    tags = [
        "no-remote-exec",
        "requires-network",
    ],
)

# Run Playwright e2e tests via Bazel.
# Requires node, npm, go on PATH and a display (headless Chromium).
sh_test(
    name = "frontend_e2e_test",
    srcs = ["tests/e2e_test.sh"],
    data = [
        ":all_srcs",
        "//srcs/cmd/ohc",
    ],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
)
