load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "frontend_backend_test",
    srcs = ["frontend_backend_test.go"],
    deps = [
        "//srcs/auth",
        "//srcs/billing",
        "//srcs/dashboard",
        "//srcs/domain",
        "//srcs/frontend/server:server_lib",
        "//srcs/integrations",
        "//srcs/orchestration",
        "//srcs/sip",
    ],
)

go_test(
    name = "integration_test",
    srcs = [
        "agent_interaction_test.go",
        "feature_integration_test.go",
        "frontend_backend_test.go",
        "minimax_e2e_test.go",
    ],
    deps = [
        "//srcs/auth",
        "//srcs/billing",
        "//srcs/dashboard",
        "//srcs/domain",
        "//srcs/frontend/server:server_lib",
        "//srcs/integrations",
        "//srcs/integrations/chatwoot",
        "//srcs/orchestration",
        "//srcs/sip",
    ],
)
