load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "integrations",
    srcs = ["registry.go"],
    importpath = "github.com/onehumancorp/mono/srcs/integrations",
    visibility = ["//visibility:public"],
)

go_test(
    name = "integrations_test",
    srcs = ["registry_test.go"],
    embed = [":integrations"],
)
