load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "interop",
    srcs = [
        "types.go",
    ],
    importpath = "github.com/onehumancorp/mono/srcs/interop",
    visibility = ["//visibility:public"],
)

go_test(
    name = "interop_test",
    srcs = [
        "swarm_test.go",
        "types_test.go",
    ],
    embed = [":interop"],
    deps = [
        "//srcs/interop/autogen",
        "//srcs/interop/crewai",
        "//srcs/interop/ironclaw",
        "//srcs/interop/openclaw",
        "//srcs/interop/semantickernel",
    ],
)
